# election-analysis-generator

./: .gitignore  .mega-linter.yml  README.md  elections.csv  elections.toml  generate_analysis.py  pyproject.toml  reports.toml  setup_db.py  sync_sources.py
.github/: dependabot.yml
.github/workflows/: mega-linter.yml  megalinter.yml  tests.yml
dupage_elections/: analysis.py  cli.py  db.py  flags.py  loader.py  models.py
election_analysis/: analysis.py  cli.py  db.py  normalize.py  reports.py
linters/: .bandit.yml
sources/: 2025-consolidated-2025-04-01.csv  2025-consolidated-primary-2025-02-25.csv  2025-consolidated-primary-precinct-2025-02-25.xls
src/election_analysis_generator/: analysis.py  cli.py  db.py  flags.py  loader.py  models.py  normalize.py  reports.py
tests/: conftest.py  test_analysis.py  test_db.py  test_dry_run.py  test_loader.py  test_loader_precinct_detail.py  test_normalize.py  test_precinct.py  test_precinct_party_change.py  test_reports.py  test_reports_e2e.py
tests/fixtures/: elections.csv  reports.toml
tests/fixtures/sources/: 2022-general-primary-2022-07-19.csv  2026-general-primary-2026-04-07.csv  2026-general-primary-precinct-2026-04-07.xlsx
