[project]
name = "election-analysis-generator"
version = "0.1.0"
description = "A tool for loading, normalising, and analysing partisan primary election results"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0",
    "openpyxl>=3.1",
]

[project.scripts]
sync-sources      = "election_analysis.cli:sync_sources"
generate-analysis = "election_analysis.cli:generate_analysis"
export-flags      = "election_analysis.cli:export_flags_cmd"
import-flags      = "election_analysis.cli:import_flags_cmd"
review-flags      = "election_analysis.cli:review_flags_cmd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=election_analysis",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["election_analysis"]
omit = ["tests/*"]
