[project]
name = "election-analysis-generator"
version = "0.1.0"
description = "A tool for loading, normalising, and analysing partisan primary election results"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0",
    "openpyxl>=3.1",
]

[project.scripts]
sync-sources      = "election_analysis_generator.cli:sync_sources"
generate-analysis = "election_analysis_generator.cli:generate_analysis"
export-flags      = "election_analysis_generator.cli:export_flags_cmd"
import-flags      = "election_analysis_generator.cli:import_flags_cmd"
load-detail       = "election_analysis_generator.cli:load_detail"
review-flags      = "election_analysis_generator.cli:review_flags_cmd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
]

[tool.pytest]
testpaths = ["tests"]
addopts = [
    "--cov=src/election_analysis_generator",
    "--cov-report=term-missing",
]

[tool.bandit.assert_used]
skips = ["*/*_test.py", "*/test_*.py"]

[tool.pyright]
pythonVersion = "3.14"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
