[project]
name = "election-analysis-generator"
version = "0.1.0"
description = "A tool for loading, normalising, and analysing partisan primary election results"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "openpyxl>=3.1",
    "defusedxml>=0.7",
]

[project.scripts]
sync-sources      = "election_analysis_generator.cli:sync_sources"
load-detail       = "election_analysis_generator.cli:load_detail"
generate-analysis = "election_analysis_generator.cli:generate_analysis"
export-flags      = "election_analysis_generator.cli:export_flags_cmd"
import-flags      = "election_analysis_generator.cli:import_flags_cmd"
review-flags      = "election_analysis_generator.cli:review_flags_cmd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
]

[tool.pytest]
testpaths = ["tests"]
addopts = [
    "--cov=src/election_analysis_generator",
    "--cov-report=term-missing",
]
filterwarnings = [
    # openpyxl cosmetic warning emitted for DuPage County detail files that
    # lack a default style definition. The files parse correctly; this is noise.
    "ignore:Workbook contains no default style:UserWarning:openpyxl",
]

[tool.bandit.assert_used]
skips = ["*/*_test.py", "*/test_*.py"]

[tool.pyright]
pythonVersion = "3.14"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
